Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1092

Creator crashes when closing designer during build

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • Qt Creator 1.3.83 (2.0.0-beta)
    • Widget Designer
    • Windows 7 (64)
    • 7ed80f165634e05030776ede90310603d4ca7d19

      (1) Create a new GUI project.
      (2) Open the main window (mainwindow.ui) and drag a TextEdit onto it.
      (3) Resize the TextEdit from the bottom right corner, for example, so that it occupies basically the whole client area.
      (4) Save.
      (5) Build the project and right after it, while the build is still going on, close the design editor. (Building with the shortcut instead of clicking on the menu should make it easier to reproduce.)
      Result: Creator crashes.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            leamelo Leandro T. C. Melo
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes