Qt Designer: Fix a crash when closing form while building.

Task-number: QTCREATORBUG-1092
Reviewed-by: Leandro T. C. Melo <leandro.melo@nokia.com>
(cherry picked from commit 7ed80f165634e05030776ede90310603d4ca7d19)